registration, partners and facilities updated

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@ script: home.js
       </div>
     </div>
 
+    <!-- TODO: reactivate upon registration opening -->
     <!-- paragraph -->
-    <div class="section">
+    <!-- <div class="section"> 
       <div class="row">
         <div class="col s8 offset-s2">
           <div class="icon-block">
@@ -86,7 +87,7 @@ script: home.js
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </div>
