--- a/programme.html
+++ b/programme.html
@@ -186,14 +186,14 @@ title: Programme
     {% include sections.html data=site.data.programme %}
 </div>
 
-<div class="section">
-    <div class="row">
+ <div class="section">
+<!--  <div class="row">
         <div class="col s8 offset-s2">
             <div class="icon-block">
                 <div class="center">
-                    <!-- <a class="chip custom1 white-text" style="font-size: 18px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
+                     <a class="chip custom1 white-text" style="font-size: 18px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
                         {{ site.data.programme.button1 }}
-                    </a> -->
+                    </a>
                     <a class="chip custom1 white-text" style="font-size: 18px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;" href="">
                     <img src="{{site.url}}/img/icons/google_calendar_logo.png" alt="Google Calendar" style="height: 50px; width: 50px; margin-right: 10px; border-radius: 0;">
                         {{ site.data.programme.button2 }}
@@ -201,6 +201,6 @@ title: Programme
                 </div>
             </div>
         </div>
-    </div>
+     </div> -->
 </div>
 </div>
