--- a/partners.html
+++ b/partners.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Partners
+title: Sponsors & Partners
 ---
 
 {% include cards.html data = site.data.partners %}
@@ -21,17 +21,17 @@ title: Partners
   {% endfor %}
 </div>
 
-<div class="section">
+<!-- <div class="section">
   <div class="row">
     <div class="col s12">
       <h4>Under the patronage of:</h4>
-      <!-- <p>If you are interested in partnering our events, please write an email to <a -->
-      <!-- href="mailto:{{ site.data.partners.mail }}">this</a> email address.</p> -->
-    </div><br>
-  </div>
+      <p>If you are interested in partnering our events, please write an email to <a -->
+<!-- href="mailto:{{ site.data.partners.mail }}">this</a> email address.</p> -->
+<!-- </div><br>
 </div>
+</div> -->
 
-{% include cards.html data = site.data.patronages %}
+<!-- {% include cards.html data = site.data.patronages %}
 <div class="row">
   {% for patronage in site.data.patronages.institutions %}
   <div class="col s12 m6 l4">
@@ -47,7 +47,7 @@ title: Partners
     </div>
   </div>
   {% endfor %}
-</div>
+</div> -->
 
 <div class="section">
   <div class="row">
