--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@ title: Schedule
             <div class="row">
                 <div class="col s12">
                     <!-- <h4>Support us</h4> -->
-                    <p>You can also download a pdf version of the programme from <a
+                    <p>You can also download the pdf version of the programme from <a
                             href='../files/GIPE25_Program.pdf'>this</a>
                         link.</p>
                 </div>
