creata pagina speakers ed aggiornamenti vari

--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,9 @@
 ---
 layout: page
 title: Schedule
+permalink: /schedule/
+schedule_stylesheet: true
+schedule_js: true
 ---
 
 {% include schedule-widget.html %}
@@ -12,7 +15,7 @@ title: Schedule
                 <div class="col s12">
                     <!-- <h4>Support us</h4> -->
                     <p>You can also download the pdf version of the programme from <a
-                            href='../files/GIPE25_Program.pdf'>this</a>
+                            href='../files/GIPE25_Program-1.pdf'>this</a>
                         link.</p>
                 </div>
             </div>
