--- a/speakers.html
+++ b/speakers.html
@@ -36,8 +36,10 @@ speakers_js: true
                     {% endfor %}
                 </ul>
                 <!-- <div class="seminar-description">{{ speaker.seminar_description | safe }}</div> -->
+            </div>
+            <div class="schedule-link-wrapper">
                 <a href="{{ '/schedule/#speaker-' | append: speaker.id | relative_url }}" class="back-to-schedule-link">
-                    <i class="material-icons">event</i> Vedi nel programma
+                    <i class="material-icons">event</i> See in the schedule
                 </a>
             </div>
         </div>
