--- a/schedule.html
+++ b/schedule.html
@@ -15,7 +15,7 @@ schedule_js: true
                 <div class="col s12">
                     <!-- <h4>Support us</h4> -->
                     <p>You can also download the pdf version of the programme from <a
-                            href='../files/GIPE25_Program-1.pdf'>this</a>
+                            href='../files/GIPE25_Program_17.07.pdf'>this</a>
                         link.</p>
                 </div>
             </div>
