--- a/index.html
+++ b/index.html
@@ -73,23 +73,20 @@ script: home.js
       </div>
     </div>
 
-    <!-- TODO: reactivate upon registration opening -->
+
     <!-- paragraph -->
-    <!-- <div class="section"> 
-      <div class="row">
-        <div class="col s8 offset-s2">
+    <div class="section fade-in">
+      <div class="center">
+        <div class="col s12 m4">
           <div class="icon-block">
-            <div class="center">
-                <a class="chip custom1 white-text" href="{{site.url}}/registration"
-                style="font-size: 24px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
-                {{ site.data.home.button }}
-                </a>
-            </div>
+            <a class="chip custom1 white-text" href="{{site.url}}/registration"
+              style="font-size: 24px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
+              {{ site.data.home.button }}
+            </a>
           </div>
         </div>
       </div>
-    </div> -->
-
+    </div>
   </div>
 </div>
 
