--- a/registration.html
+++ b/registration.html
@@ -7,24 +7,18 @@ title: Registration
 {% include cards.html data = site.data.registration %}
 {% include sections.html data = site.data.registration %}
 
-<!-- <h4> Registration form </h4>
-<iframe id="regform" src="https://docs.google.com/forms/d/e/1FAIpQLSeOAAlmDP5100C-p4VjSFdSE977F2hyvxC98DUH6C-E1S6hKw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
-
-<!--
-<div class="section">
+<div class="section fade-in">
+  <h4> Registration form </h4>
   <div class="row">
     <div class="col s8 offset-s2">
       <div class="icon-block">
         <div class="center">
-            <a class="chip custom1 white-text" href="https://forms.gle/MSesXdG3jdBG1ZEs6"
+          <a class="chip custom1 white-text" href="https://forms.gle/yfJq3nnhumPWPksDA"
             style="font-size: 24px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
             {{ site.data.registration.button }}
-            </a>
-            
-            </a>
+          </a>
         </div>
       </div>
     </div>
   </div>
-</div> 
--->
+</div>
