home page button graphics improved

--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@ script: home.js
     <div class="section fade-in">
       <div class="center">
         <div class="col s12 m4">
+          <h3 class="center light" style="margin-bottom: 2rem;">{{ site.data.home.button_text }}</h3>
           <div class="icon-block">
             <a class="chip custom1 white-text" href="{{site.url}}/registration"
               style="font-size: 24px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
               {{ site.data.home.button }}
             </a>
           </div>
+          <p style="margin: 3rem;"> </p>
         </div>
       </div>
     </div>
