--- a/registration.html
+++ b/registration.html
@@ -4,11 +4,26 @@ title: Registration
 ---
 
 {% include description.html data = site.data.registration %}
+
+<div class="section fade-in">
+  <div class="row">
+    <div class="col s8 offset-s2">
+      <div class="icon-block">
+        <div class="center">
+          <a class="chip custom1 white-text" href="https://forms.gle/yfJq3nnhumPWPksDA"
+            style="font-size: 24px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
+            {{ site.data.registration.button }}
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% include cards.html data = site.data.registration %}
 {% include sections.html data = site.data.registration %}
 
 <div class="section fade-in">
-  <h4> Registration form </h4>
   <div class="row">
     <div class="col s8 offset-s2">
       <div class="icon-block">
