--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@ title: Registration
 
 {% include description.html data = site.data.registration %}
 
-<div class="section fade-in">
+<div class="section">
   <div class="center">
     <div class="col s8 offset-s2">
       <div class="icon-block">
