chiusura iscrizioni e piccoli aggiornamenti vari

--- a/index.html
+++ b/index.html
@@ -75,16 +75,11 @@ script: home.js
 
 
     <!-- paragraph -->
-    <div class="section fade-in">
+    <!-- <<div class="section fade-in">
       <div class="center">
         <div class="col s12 m4">
           <h3 class="center light" style="margin-bottom: 2rem;">{{ site.data.home.button_text }}</h3>
           <div class="icon-block">
-            <!-- <a class="chip custom1 white-text" href="{{site.url}}/registration"
-              style="font-size: 22px; display: inline-flex; align-items: center; margin:5px 0px; padding: 40px 30px;">
-              {{ site.data.home.button }}
-              <i class="material-icons right" style="font-size: 1.2rem; color: white;">{{ arrow_forward }}</i>
-            </a> -->
             {% assign btn = site.data.home.registration_button %}
             <a href="{{ btn.url | relative_url }}" class="custom-button waves-effect">
               <span class="button-text">{{ btn.text }}</span>
@@ -96,7 +91,7 @@ script: home.js
           <p style="margin: 4rem;"> </p>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
