--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@ title: Registration
 
 {% include description.html data = site.data.registration %}
 
-<div class="section">
+<!-- <div class="section">
   <div class="center">
     <div class="col s8 offset-s2">
       <div class="icon-block">
@@ -19,12 +19,12 @@ title: Registration
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 {% include cards.html data = site.data.registration %}
 {% include sections.html data = site.data.registration %}
 
-<div class="section fade-in">
+<!-- <div class="section fade-in">
   <div class="center">
     <div class="col s8 offset-s2">
       <div class="icon-block">
@@ -39,4 +39,4 @@ title: Registration
       <p style="margin: 3rem;"> </p>
     </div>
   </div>
-</div>
+</div> -->
